--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_about"
-        android:icon="@drawable/search_icon"
-        android:title="About"
+        android:id="@+id/menu_exit"
+        android:icon="@drawable/exit"
+        android:title="Logout"
         app:showAsAction="always"/>
 </menu>
